<resources>
    <string name="app_name">নিরাপদ সড়ক গড়ি</string>
    <string name="app_about">অ্যাপ সম্পর্কে জানুন</string>
    <string name="action_settings">Settings</string>
    <string name="CHKDefaultEmer">সংবেদনশীলতা</string>
    <string name="About">অ্যাপ সম্পর্কে জানুন</string>
    <string name="CHKDefaultEmerOff">সংবেদনশীলতা বন্ধ করুন</string>
     <string name="CHKDefaultEmerOffDin"> বন্ধ করুন</string>
      <string name="CHKDefaultEmerOnDin"> চালু করুন</string>
    <string name="title_activity_law">Law</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_show_page">ShowPage</string>
    <string name="BackEnd">আর পাতা নেই, সামনে যান</string>
    <string name="GoEnd">আর পাতা নেই , পেছনে যান</string>
    <string name="For23Driver1">যানবাহনে চলন্তাবস্থায় চালকের করণীয় :\n\n\n
১. সর্বদা সিটবেল্ট ব্যবহার করুন এবং প্রয়োজনে এয়ারব্যাগ ব্যবহার করা ।\n\n
২. মোটরযান আইন মেনে চলা । \n\n
৩. রাস্তার বামদিক ঘেঁষে গাড়ি চালনা।\n\n
৪. ভিআইপি, অ্যাম্বুলেন্স, ফায়ার-পুলিশের গাড়িকে প্রাধান্য দেওয়া। \n\n
৫. সতর্কাবস্থায় এবং শক্ত করে স্টিয়ারিং ধরে রাখা।\n\n
৬. অন্য গাড়ি থেকে নিজের গাড়ির দূরত্ব বজায় রাখা। \n\n
৭. আচমকা ব্রেক না করা।\n\n
৮. লেন পরিবর্তনের জন্য ইন্ডিকেটর ব্যবহার করা। \n\n
৯. গাড়িতে ত্রুটি দেখা দিলে সারিয়ে নেওয়া।\n\n
১০. দুর্যোগপূর্ণ আবহাওয়ায় হেডলাইট জ্বালিয়ে চলা।\n\n
১১. নির্ধারিত গতির চেয়ে অতিরিক্ত গতিতে গাড়ি না চালানো। \n\n
১২. অতিরিক্ত যাত্রী/মালামাল বহন না করা। \n\n
১৩. শারীরিক অসুস্থতা নিয়ে গাড়ি না চালানো।\n\n
১৪. দৃষ্টিশক্তির ব্যত্যয় ঘটলে বিশ্রাম নিয়ে নেওয়া। \n\n
১৫. মাত্রাতিরিক্ত ওষুধ সেবন না করা। \n\n
১৬. যত্রতত্র গাড়ি থামিয়ে যাত্রী উঠানামা না করা। \n\n
১৭. প্রতি ১০ সেকেন্ডে ছয়বার লুকিং গ্লাসে নজর রাখা ।\n\n</string>
    <string name="For23Driver2">১৮. ধূমপান বা মাদকদ্রব্য সেবন না করা।\n\n
১৯. গাড়িতে মোবাইল ফোন ব্যবহার না করা।\n\n
২০. গতিসীমা জোন মেনে চলা ।\n\n
২১. জনবহুল এলাকা এবং বিভিন্ন রাস্তার সংযোগস্থলে বিশেষ সতর্কতা অবলম্বন করা ।\n\n
২২. প্রত্যেকটি যানবাহন যেন নিজেদের ভেতর নিরাপদ দূরত্ব বজায় থাকে সেই বিষয়টি লক্ষ্য রাখা ।\n\n</string>
    <string name="For24Owner">মালিক এর দায়িত্ব ও কর্তব্য :\n\n\n
১. ত্রুটিযুক্ত গাড়ী যাতে রাস্তায় চলতে না পারে তা নিশ্চিত করতে হবে।  \n\n
২. চালকের বৈধ লাইসেন্স ও দক্ষ নিশ্চিত করতে হবে। \n\n
৩. চালকদের মাসিক কাউন্সিলিং করাতে হবে। \n\n
৪. চালক শারীরিক ভাবে সুস্থ আছে কিনা যাচাই করতে হবে।\n\n
৫. কোন চালককে অতিরিক্ত দায়িত্ব দেওয়া যাবে না।\n\n
৬. ড্রাইভিং পেশার উত্কর্ষহীনতা  বাড়াতে হবে।পর্যাপ্ত সুবিধা দিতে হবে।\n\n
৭. চালকদের জন্য প্রয়জনীয় ট্রেনিং এর ব্যবস্থা করতে হবে।\n\n
৮. ঝুঁকিপূর্ণ এবং ধীরগতির যানবাহনের ব্যাপারে বিশেষ সতর্কতা অবলম্বন করতে হবে ।\n\n
৯. অতিরিক্ত ভাড়া আদায় থেকে বিরত থাকতে হবে ।\n\n</string>
    <string name="PassengerText31">যাত্রী সাবধানতা: \n\n\n
১. চলন্ত গাড়ীতে উঠার চেষ্টা করবেন না।\n\n
২. চলন্ত গাড়ী হতে নামবেন না।\n\n
৩. চলন্ত গাড়ির বাহিরে শরীরের অংশ বের করবেন না। \n\n
৪. অনুমোদনবিহীন কোন বাসস্ট্যাণ্ডে বা বাসস্ট্যাণ্ড ছাড়া কোন স্থান থেকে বাসে ওঠা বা নামা থেকে বিরত থাকুন ।\n\n
৫. নির্ধারিত স্থান হতে গাড়ীতে উঠুন, পথিমধ্যে হতে নয়।\n\n
৬. আপনার গাড়ীর ড্রাইভারকে নির্ধারিত সীমার চাইতে বেশী গতিতে গাড়ী চালানো থেকে বিরত রাখুন।\n\n
৭. কার কিংবা ট্যাক্সি তে চড়লে সিট বেল্ট বাঁধুন।\n\n
৮. মোটরসাইকেল এ চড়লে হেলমেট ব্যবহার করুন।\n\n
৯. ড্রাইভার ফোনে কথা বললে নিষেধ করুন। \n\n
১০. বাসস্ট্যাণ্ডে লাইন মেনে চলুন ।\n\n
১১. যাত্রাসময়ের অনেক পূর্বেই বাসস্ট্যাণ্ডের উদ্দেশ্যে রওনা দিন ।\n\n
১২. বাসের ভেতর উচ্চশব্দ করা থেকে বিরত থাকুন ।\n\n
১৩. বাসের ভেতর দাঁড়ানো অবস্থায় সর্বদা বাসের হাতল ধরে থাকুন বা অন্য কোন অবলম্বনের সহায়তা নিন ।\n\n</string>
    <string name="footPassers">১. চলাচলের সময় ফুটপাত ব্যবহার করুন।\n\n
২. সিগন্যাল ছাড়া অবস্থায় কখনই রাস্তা পার হবেন না।\n\n
৩. কোন থেমে থাকা গাড়ীর সামনে দিয়ে রাস্তা পার হতে হলে, ড্রাইভারের দৃষ্টি আকর্ষণ করুন, অতঃপর রাস্তা পার হন।\n\n
৪. রাস্তা পারাপারের সময় আশেপাশের ফুট ওভারব্রীজ,আণ্ডারপাস এবং জেব্রা ক্রসিং ব্যবহার করুন ।\n\n
৫. রাস্তা পারাপারের সময় ফোনে কথা না বলা ।\n\n
৬. রাস্তায় হেডফোন কানে না দেওয়া।\n\n
৭. কোন স্থানে জেব্রা ক্রসিং না থাকলে ,রাস্তা ফাঁকা না হলে রাস্তা পার হওয়ার চেষ্টা করবেন না।\n\n
৮. রাস্তা পারাপারের সময় দুদিকেই লক্ষ্য রাখুন ।\n\n
৯. সর্বোপরি নিজে সচেতন হোন, অন্যকে সচেতন করুন। \n\n</string>
    <string name="GPublic">জনসাধারণের করনীয়ঃ\n\n\n ১. রাস্তায় পশু বেধে রাখবেন না। \n\n
২. যেখানে সেখনে গাড়ী পারকিং করবেন না। \n\n
৩. ট্রাফিক আইন জানুন এবং মেনে চলুন। \n\n</string>
    <string name="page51a">১. গাড়ি চালানোর সময় ট্রাফিক পুলিশের নির্দেশনা না মানা ।\n\n
২. বেপরোয়া গতিতে গাড়ি চালানো ।\n\n
৩. গাড়ির ফিটনেসসংক্রান্ত কাগজপত্র নবায়ন না করা ।\n\n
৪. ড্রাইভিং লাইসেন্স নবায়ন না করা ।\n\n
৫. নির্ধারিত রুট পারমিটের রাস্তা ব্যবহার না করা ।\n\n
৬. নির্ধারিত গতিসীমা অতিক্রম করা ।\n\n
৭. ওভারটেক করা ।\n\n
৮. রাতে হেডলাইট না জ্বালিয়ে গাড়ি চালানো ।\n\n
৯. সিটবেল্ট না বাঁধা ।\n\n
১০. মোটরবাইকে দুজনের বেশি যাত্রী বহন করা ।\n\n
১১. হেলমেট না পরা ।\n\n
১২. সঠিক জায়গায় গাড়ি পার্ক না করা ।\n\n
১২. গাড়িতে নাম্বার প্লেট না থাকা  ।\n\n
১৩. মদপান বা নেশাগ্রস্ত অবস্থায় গাড়ি চালানো ।\n\n
আঠারো বছরের নিচে কোনো ব্যক্তি সর্বসাধারণের জন্য ব্যবহার্য স্থানে মোটরযান চালাতে পারবেন না।\n\n
১৪. এক ব্যক্তির ড্রাইভিং লাইসেন্স অন্য ব্যক্তি ব্যবহার করা ।\n\n
১৫. বাস, ট্রাক বা অন্য গণপরিবহন কিংবা পণ্যবাহী যানে কন্ডাক্টর হিসেবে কাজ করতে হলে অবশ্যই লাইসেন্স না থাকা । \n\n</string>
    <string name="page51b">১৬. আঠারো বছরের কম বয়সী কেউ কন্ডাক্টরের কাজ করলে ।\n\n
১৭. সর্বসাধারণের ব্যবহার্য স্থানে রেজিস্ট্রেশন ছাড়া কোনো মোটরযান চালানো ।\n\n
১৮. গাড়ির বাম্পার কিংবা ছাদে আরোহণ করা । \n\n
১৯. কোনো গাড়িতে হাইড্রোলিক হর্ন ব্যবহার করা ।\n\n
সুত্র : যায়যায়দিন পত্রিকা ।\n\n</string>
    <string name="page52a">আইন ভাঙলে জরিমানা:\n\n\n

আইন লঙ্ঘনের দায়ে গাড়ির একটি কিংবা দুটি কাগজ জব্দ করার পর আইন ভঙ্গকারীকে একটি রসিদ দেয়া হয়।কোথায়, কী অপরাধে আপনাকে জরিমানা করা হয়েছে, কে জরিমানা করলেন, কত তারিখে জরিমানা করা হয়েছে, কত তারিখের মধ্যে আপনাকে হাজিরা দিতে হবে_ সবকিছুই রসিদে উল্লেখ করা থাকে। তবে জেলা শহর ও বিভাগগুলোয় ট্রাফিক আইন ভঙ্গের জন্য নির্ধারিত জরিমানার টাকার পরিমাণও বিভিন্ন ধরনের হয়।</string>
    <string name="page52b">বিভিন্ন অপরাধে জরিমানার পরিমাণ:\n\n\n
*১৩৭ ধারা অনুসারে যে কোনো অপরাধের শাস্তি প্রদানে ২০০ টাকা জরিমানা হতে পারে।\n\n
*১৩৯ ধারা অনুসারে নিষিদ্ধ হর্ন কিংবা শব্দ সৃষ্টিকারী যন্ত্র লাগালে ১০০ টাকা ।\n\n
*১৪০ ধারা অনুসারে আদেশ অমান্য, বাধা সৃষ্টি ও তথ্য প্রদানে অস্বীকার করলে ৫০০ টাকা ।\n\n
*১৪২ ধারা অনুসারে নির্ধারিত গতির চেয়ে দ্রুত গতিতে গাড়ি চালালে ৩০০ টাকা ।\n\n
*১৪৬ ধারা অনুসারে দুর্ঘটনাসংক্রান্ত অপরাধে ৫০০ থেকে ১০০০ টাকা । \n\n
*১৪৯ ধারায় নিরাপত্তাহীন অবস্থায় গাড়ি ব্যবহার করলে ৩০০ টাকা ।\n\n
*১৫০ ধারা অনুসারে ধোঁয়া বের হলে ২০০ টাকা ।\n\n
*১৫১ ধারা অনুসারে আইনের সঙ্গে সঙ্গতিহীন অবস্থায় গাড়ি বিক্রি বা গাড়ির মালিকানা পরিবর্তন করলে যথাক্রমে ৫০০০ ও ১২৫০ টাকা ।\n\n
*১৫২ ধারা অনুসারে রেজিস্ট্রেশন, ফিটনেস সার্টিফিকেট অথবা পারমিট ছাড়া মোটরগাড়ি ব্যবহার করলে ৭০০ টাকা ।\n\n
*১৫৪ ধারা অনুসারে অনুমোদিত ওজন অতিক্রম করে গাড়ি চালালে ৫০০ থেকে ১০০০ টাকা ।\n\n
*১৫৫ ধারা অনুসারে বীমা ছাড়া বা মেয়াদ উত্তীর্ণের জন্য ৫০০ থেকে ২০০০ টাকা ।\n\n
*১৫৬ ধারা অনুসারে ড্রাইভিং লাইসেন্স ছাড়া গাড়ি চালালে ৫০০ থেকে ১০০০ টাকা ।\n\n
*১৫৭ ধারা অনুসারে প্রকাশ্য সড়কে অথবা প্রকাশ্য স্থানে প্রতিবন্ধকতা সৃষ্টি করলে ২৫০ থেকে ৫০০ টাকা জরিমানা গুনতে হবে।\n\n\n
সুত্র : যায়যায়দিন পত্রিকা ।\n\n</string>
    <string name="page53">(।) মোটরসাইকেলের প্রয়োজনীয় কাগজপত্রগুলো হলো :\n\n
১. রেজিস্ট্রেশন সার্টিফিকেট \n\n
২. ইন্সুরেন্স সার্টিফিকেট ।\n\n
৩. ট্যাক্স টোকেন ।\n\n
৪. ড্রাইভিং লাইসেন্স ।\n\n
(।।) মাইক্রো বাস/কার বা বাস ভাড়ায় চললে উলি্লখিত কাগজগুলোর বাইরে প্রয়োজন হবে ফিটনেস সার্টিফিকেট ও রুট পারমিট।\n\n
ভাড়ায় না চললে রুট পারমিটের প্রয়োজন পড়বে না।\n\n</string>
    <string name="title_activity_by_passers">ByPassers</string>
    <string name="title_activity_driver_owner">DriverOwner</string>
    <string name="title_activity_anim_light_signal">AnimLightSignal</string>
    <string name="redST">থামুন ।</string>
    <string name="yellowST">প্রস্তুত হোন ।</string>
    <string name="greenST">এবার যান ।</string>
    <string name="title_activity_emergency_complain">EmergencyComplain</string>
    <string name="FirstAidST">দুর্ঘটনা ঘটলে করণীয়ঃ\n\n\n
১. নিজেকে পরীক্ষা করুন কতটুকু আহত হয়েছেন।\n\n
২. যদি সামান্য আঘাত হন ,তাহলে এমারজেন্সি নম্বরে ফোন করুন কিংবা অন্য কারও সাহায্য নিন।\n\n
৩. খুব বেশি আঘাত না পেলে চলাচল করতে পারলে অন্য যাত্রীদের খেয়াল করুন তাদের সাহায্য করুন এবং এমারজেন্সি সার্ভিসের জন্য যোগাযোগ করুন।\n\n
৪. পুলিশকে ফোন করুন। \n\n</string>
    <string name="title_activity_passers_crossing_road">PassersCrossingRoad</string>
    <string name="crossman">৩. রাস্তা পারাপার :\n\n
প্রথমে বামে তাকান এরপর ডানে তাকান এবং এরপর এবার বামে তাকান , রাস্তা নিরাপদ হলে নিরাপদে রাস্তা পার হোন ।\n\n</string>
    <string name="footpathuse">১. ফুটপাথ ব্যাবহার :\n\n
রাস্তা দিয়ে চলাচলের সময় সর্বদা ফুটপাথ ব্যাবহার করুন ।\n\n</string>
    <string name="bridge">৪. ফুট-ওভার ব্রিজ ব্যাবহার :\n\n
ঘন যানবাহন যুক্ত রাস্তা পারাপারের সময় জেব্রা ক্রসিং না থাকলে নিকটস্থ ফুট ওভার ব্রিজ ব্যাবহার করে নিরাপদে রাস্তা পার হোন ।\n\n</string>
    <string name="zebrause">২. জেব্রা ক্রসিং :\n\n
রাস্তা পারাপারে জেব্রা ক্রসিং থাকলে তা ব্যাবহার করুন ।\n\n</string>
    <string name="title_activity_complain_box">ComplainBox</string>
    <string name="title_activity_brt">BRTA</string>
    <string name="netConn">অনুগ্রহ করে ইন্টেরনেট যোগাযোগ চালু করুন </string>
    <string name="Load">লোড হচ্ছে ...অনুগ্রহ করে অপেক্ষা করুন</string>
    <string name="backTitle">সতর্ক বার্তা</string>
    <string name="backMessage">আপনি কি অ্যাপ্লিকেশন টি ত্যাগ করতে চান ?</string>
    <string name="yes">হ্যাঁ</string>
    <string name="no">না</string>
    <string name="title_activity_road_sign">RoadSign</string>
    <string name="sna">থামুন</string>
    <string name="snaaaaa">জাংশনে ব্যবহৃত হয়</string>
    <string name="snb">রাস্তাদিন</string>
    <string name="snc">প্রধান সাইন</string>
    <string name="sncc">চলাচলের চিহ্ন</string>
    <string name="snd">মোটরযান চলাচল/প্রবেশ নিষেধ</string>
    <string name="sne">ট্রাক চলাচল/প্রবেশ নিষেধ </string>
    <string name="snf">ঠেলাগাড়ি চলাচল নিষেধ</string>
    <string name="sng">পশু বাহিত যান চলাচল নিষেধ</string>
    <string name="snh">পথচারী চলাচল নিষেধ</string>
    <string name="sni">রিকশা চলাচল নিষেধ</string>
    <string name="snj">সাইকেল চলাচল নিষেধ</string>
    <string name="snjj">বাম অথবা ডানপাশ দিয়ে চলুন</string>
    <string name="snk">ট্রাক্টর অথবা ধীরগতির যান চলাচল নিষেধ</string>
    <string name="snl">বিস্ফোরক দ্রব্যবাহী মোটরযান চলাচল নিষেধ</string>
    <string name="snm">প্রদর্শিত মাপের বেশি দৈরঘের মোটরযান চলাচল নিষেধ</string>
    <string name="snrrrr">পথচারী পারাপার</string>
    <string name="sns">থামানো নিষেধ</string>
    <string name="snuuuu">জাতীয় মহাসড়ক, দিকনির্দেশক সাইন (১)</string>
    <string name="snvvvv">জাতীয় মহাসড়ক, দিকনির্দেশক সাইন (২)</string>
    <string name="UserMailHints">আপনার ই-মেইল প্রবেশ করুন</string>
    <string name="UserPassWordHints">আপনার পাসওয়ার্ড দিন</string>
    <string name="MailSubHint">ই-মেইল বিষয় লিখুন</string>
    <string name="AppFeature">অ্যাপ ফিচারঃ \n\n১.Sensor টেকনোলোজি ব্যবহার করে দুর্ঘটনায় দ্রুত সাহায্য নেয়া ।\n২.যেকোনো সম্ভাবনাময়ী বিপজ্জনক পরিস্থির জন্য দায়ী অবস্থার ছবি সহ অভিযোগ ।
    \n৩.অটোম্যাটিক s.m.s / m.m.s অথবা E-Mail ব্যবহার ।\n৪.দুর্ঘটনা এড়ানোয় চালক মালিক দের জন্য নির্দেশনা ।\n৫.যানবাহনের গতি পরীক্ষা ও অভিযোগ।\n
   ৬.জনসাধারণের জন্য বিভিন্ন দিক নির্দেশনা । \n৭.দুর্ঘটনা রোধে কর্তৃপক্ষের নিকট জনগনের জন্য সাজেশান বক্স ।\n৮.আবশ্যিক কাগজ-পত্র ও সাথে বিভিন্ন ট্রাফিক আইন ভংগের কারণ এবং জরিমানা ।\n৯.মানচিত্রে ও রুটে
সারা দেশের দুর্ঘটনা প্রবন এলাকা সমূহ ।\n১০.SOS টেকনোলোজি, দুর্ঘটনা প্রবন এলাকা সমূহ হতে সাবধানতা অবলম্বনের জন্য ,সতর্কতা ও অটোমেটিক বার্তা চালু।\n১১. প্রতিদিন ট্রাফিক রুলস মেনে চলার জন্য বার্তা পাওয়া । \n\n   
</string>
<string name="Developer">অ্যাপ ডেভেলোপমেন্ট এ আমরা ছিলাম ...</string>
<string name="Developer1">->এন.আই.মোঃ আসাফুদ্দৌলা ,সি.এস.ই, রুয়েট     </string>
<string name="Developer2">->বায়জিদ ইসলাম ,সি.এস.ই, রুয়েট    </string>
<string name="Developer3">->হাসিব মির্জা ,সি.এস.ই, রুয়েট    </string>
</resources>