<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#578657"
    tools:context=".MainPage" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:weightSum="100">
        
       
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:layout_weight="34"
        android:weightSum="100">

             <EditText
                android:id="@+id/UMailSub"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/etbg"
                android:ems="10" 
                android:hint="@string/MailSubHint"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                >
        <requestFocus />
            </EditText>
        <EditText
                android:id="@+id/UMail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/etbg"
                android:ems="10" 
                android:hint="@string/UserMailHints"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                >
                
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/UPassWord"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/etbg"
                android:ems="10"
                android:inputType="textPassword" 
                 android:hint="@string/UserPassWordHints"
                 android:layout_marginTop="25dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:paddingLeft="10dp"
                />

    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="horizontal" 
        android:layout_weight="66"
        android:weightSum="100">
                <Button
                android:id="@+id/sendMail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/senda"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="50" />

            <Button
                android:id="@+id/gap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/gap"
                android:layout_weight="50" />
            
            
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
